--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+@media screen and (max-width: 600px) {
+  .Certs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .Certs img {
+    width: 50%; /* Adjust the width of the images */
+    height: auto; /* Maintain aspect ratio */
+    margin: 10px 0; /* Adjust the margin for spacing between vertically stacked images */
+  }
+}
+
 /* Define a keyframe animation called fadeIn */
 @keyframes fadeIn {
   0% { opacity: 0; } /* Start with opacity 0 at the beginning of the animation */
